--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,64 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
 
-    </head>
-    <body>
-        
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>Memory Game</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+    <section class="memory-game">
+        <div class="memory-card">
+            <img class="front-face" src="img/front-face.svg" alt="svg" />
+            <img class="back-face" src="img/back-face.svg" alt="svg" />
+        </div>
+        <div class="memory-card">
+            <img class="front-face" src="img/front-face.svg" alt="svg" />
+            <img class="back-face" src="img/back-face.svg" alt="svg" />
+        </div>
+        <div class="memory-card">
+            <img class="front-face" src="img/front-face.svg" alt="svg" />
+            <img class="back-face" src="img/back-face.svg" alt="svg" />
+        </div>
+        <div class="memory-card">
+            <img class="front-face" src="img/front-face.svg" alt="svg" />
+            <img class="back-face" src="img/back-face.svg" alt="svg" />
+        </div>
+        <div class="memory-card">
+            <img class="front-face" src="img/front-face.svg" alt="svg" />
+            <img class="back-face" src="img/back-face.svg" alt="svg" />
+        </div>
+        <div class="memory-card">
+            <img class="front-face" src="img/front-face.svg" alt="svg" />
+            <img class="back-face" src="img/back-face.svg" alt="svg" />
+        </div>
+        <div class="memory-card">
+            <img class="front-face" src="img/front-face.svg" alt="svg" />
+            <img class="back-face" src="img/back-face.svg" alt="svg" />
+        </div>
+        <div class="memory-card">
+            <img class="front-face" src="img/front-face.svg" alt="svg" />
+            <img class="back-face" src="img/back-face.svg" alt="svg" />
+        </div>
+        <div class="memory-card">
+            <img class="front-face" src="img/front-face.svg" alt="svg" />
+            <img class="back-face" src="img/back-face.svg" alt="svg" />
+        </div>
+        <div class="memory-card">
+            <img class="front-face" src="img/front-face.svg" alt="svg" />
+            <img class="back-face" src="img/back-face.svg" alt="svg" />
+        </div>
+        <div class="memory-card">
+            <img class="front-face" src="img/front-face.svg" alt="svg" />
+            <img class="back-face" src="img/back-face.svg" alt="svg" />
+        </div>
+        <div class="memory-card">
+            <img class="front-face" src="img/front-face.svg" alt="svg" />
+            <img class="back-face" src="img/back-face.svg" alt="svg" />
+        </div>
+    </section>
+    <script src="scripts/game.js"></script>
+</body>
+
 </html>
