First implementation of game logic.

--- a/src/index.html
+++ b/src/index.html
@@ -9,51 +9,51 @@
 
 <body>
     <section class="memory-game">
-        <div class="memory-card">
+        <div class="memory-card" data-animal="cat">
             <img class="front-face" src="img/front-face.svg" alt="svg" />
             <img class="back-face" src="img/back-face.svg" alt="svg" />
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-animal="cat">
             <img class="front-face" src="img/front-face.svg" alt="svg" />
             <img class="back-face" src="img/back-face.svg" alt="svg" />
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-animal="dog">
             <img class="front-face" src="img/front-face.svg" alt="svg" />
             <img class="back-face" src="img/back-face.svg" alt="svg" />
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-animal="dog">
             <img class="front-face" src="img/front-face.svg" alt="svg" />
             <img class="back-face" src="img/back-face.svg" alt="svg" />
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-animal="pig">
             <img class="front-face" src="img/front-face.svg" alt="svg" />
             <img class="back-face" src="img/back-face.svg" alt="svg" />
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-animal="pig">
             <img class="front-face" src="img/front-face.svg" alt="svg" />
             <img class="back-face" src="img/back-face.svg" alt="svg" />
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-animal="cow">
             <img class="front-face" src="img/front-face.svg" alt="svg" />
             <img class="back-face" src="img/back-face.svg" alt="svg" />
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-animal="cow">
             <img class="front-face" src="img/front-face.svg" alt="svg" />
             <img class="back-face" src="img/back-face.svg" alt="svg" />
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-animal="sheep">
             <img class="front-face" src="img/front-face.svg" alt="svg" />
             <img class="back-face" src="img/back-face.svg" alt="svg" />
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-animal="sheep">
             <img class="front-face" src="img/front-face.svg" alt="svg" />
             <img class="back-face" src="img/back-face.svg" alt="svg" />
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-animal="chicken">
             <img class="front-face" src="img/front-face.svg" alt="svg" />
             <img class="back-face" src="img/back-face.svg" alt="svg" />
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-animal="chicken">
             <img class="front-face" src="img/front-face.svg" alt="svg" />
             <img class="back-face" src="img/back-face.svg" alt="svg" />
         </div>
