Added new images for front and back face

--- a/src/index.html
+++ b/src/index.html
@@ -10,52 +10,52 @@
 <body>
     <section class="memory-game">
         <div class="memory-card" data-animal="cat">
-            <img class="front-face" src="img/front-face.svg" alt="svg" />
-            <img class="back-face" src="img/back-face.svg" alt="svg" />
+            <img class="front-face" src="img/cat.png" alt="svg" />
+            <img class="back-face" src="img/back-face.png" alt="svg" />
         </div>
         <div class="memory-card" data-animal="cat">
-            <img class="front-face" src="img/front-face.svg" alt="svg" />
-            <img class="back-face" src="img/back-face.svg" alt="svg" />
+            <img class="front-face" src="img/cat.png" alt="svg" />
+            <img class="back-face" src="img/back-face.png" alt="svg" />
         </div>
         <div class="memory-card" data-animal="dog">
-            <img class="front-face" src="img/front-face.svg" alt="svg" />
-            <img class="back-face" src="img/back-face.svg" alt="svg" />
+            <img class="front-face" src="img/dog.png" alt="svg" />
+            <img class="back-face" src="img/back-face.png" alt="svg" />
         </div>
         <div class="memory-card" data-animal="dog">
-            <img class="front-face" src="img/front-face.svg" alt="svg" />
-            <img class="back-face" src="img/back-face.svg" alt="svg" />
+            <img class="front-face" src="img/dog.png" alt="svg" />
+            <img class="back-face" src="img/back-face.png" alt="svg" />
         </div>
         <div class="memory-card" data-animal="pig">
-            <img class="front-face" src="img/front-face.svg" alt="svg" />
-            <img class="back-face" src="img/back-face.svg" alt="svg" />
+            <img class="front-face" src="img/pig.png" alt="svg" />
+            <img class="back-face" src="img/back-face.png" alt="svg" />
         </div>
         <div class="memory-card" data-animal="pig">
-            <img class="front-face" src="img/front-face.svg" alt="svg" />
-            <img class="back-face" src="img/back-face.svg" alt="svg" />
+            <img class="front-face" src="img/pig.png" alt="svg" />
+            <img class="back-face" src="img/back-face.png" alt="svg" />
         </div>
         <div class="memory-card" data-animal="cow">
-            <img class="front-face" src="img/front-face.svg" alt="svg" />
-            <img class="back-face" src="img/back-face.svg" alt="svg" />
+            <img class="front-face" src="img/cow.png" alt="svg" />
+            <img class="back-face" src="img/back-face.png" alt="svg" />
         </div>
         <div class="memory-card" data-animal="cow">
-            <img class="front-face" src="img/front-face.svg" alt="svg" />
-            <img class="back-face" src="img/back-face.svg" alt="svg" />
+            <img class="front-face" src="img/cow.png" alt="svg" />
+            <img class="back-face" src="img/back-face.png" alt="svg" />
         </div>
         <div class="memory-card" data-animal="sheep">
-            <img class="front-face" src="img/front-face.svg" alt="svg" />
-            <img class="back-face" src="img/back-face.svg" alt="svg" />
+            <img class="front-face" src="img/sheep.png" alt="svg" />
+            <img class="back-face" src="img/back-face.png" alt="svg" />
         </div>
         <div class="memory-card" data-animal="sheep">
-            <img class="front-face" src="img/front-face.svg" alt="svg" />
-            <img class="back-face" src="img/back-face.svg" alt="svg" />
+            <img class="front-face" src="img/sheep.png" alt="svg" />
+            <img class="back-face" src="img/back-face.png" alt="svg" />
         </div>
         <div class="memory-card" data-animal="chicken">
-            <img class="front-face" src="img/front-face.svg" alt="svg" />
-            <img class="back-face" src="img/back-face.svg" alt="svg" />
+            <img class="front-face" src="img/chicken.png" alt="svg" />
+            <img class="back-face" src="img/back-face.png" alt="svg" />
         </div>
         <div class="memory-card" data-animal="chicken">
-            <img class="front-face" src="img/front-face.svg" alt="svg" />
-            <img class="back-face" src="img/back-face.svg" alt="svg" />
+            <img class="front-face" src="img/chicken.png" alt="svg" />
+            <img class="back-face" src="img/back-face.png" alt="svg" />
         </div>
     </section>
     <script src="scripts/game.js"></script>
